<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.luasoftware.luapass.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_help_outline_white_24dp"
        android:title="@string/helpMenuItem"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_feedback"
        android:title="@string/feedbackMenuItem"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_change_name"
        android:title="@string/changeNameMenuItem"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about_developer"
        android:title="@string/aboutDevMenuItem"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/logoutMenuItem"
        app:showAsAction="never" />

</menu>