<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cinema.cinema_supervisor.activity.MainActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:onClick="onFabClick"
        app:layout_constraintBottom_toBottomOf="@+id/mScrollView"
        app:layout_constraintEnd_toEndOf="@+id/mScrollView"
        app:srcCompat="@drawable/ic_camera_alt_white_24dp" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:buttonGravity="bottom"
        app:layout_constraintBottom_toTopOf="@+id/mScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:subtitleTextColor="@color/white"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:id="@+id/mScrollView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="#fafafa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <RelativeLayout
            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#F5F5F5"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/linLayout"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:orientation="vertical">

                    </LinearLayout>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv1"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        app:cardCornerRadius="5dp">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/imageView5"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:scaleType="fitXY" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:orientation="vertical">

                                <com.liangfeizc.avatarview.AvatarView
                                    android:id="@+id/cinemaPictureCinemaActivityAvatarView"
                                    android:layout_width="175dp"
                                    android:layout_height="175dp"
                                    android:layout_margin="10dp"
                                    android:elevation="10dp"
                                    android:onClick="onImageClick"
                                    android:src="@drawable/ic_ticket_accent"
                                    app:border_color="@color/colorAccent"
                                    app:shadow_color="@color/colorAccent" />

                            </LinearLayout>

                        </FrameLayout>

                    </androidx.cardview.widget.CardView>

                </FrameLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:id="@+id/linearLayout3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/cardView"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/usernameMainActivityTextView"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:text="@string/loading_message"
                                android:textSize="25sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp"
                            android:text="@string/positionMainActivityTextView"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/positionMainActivityTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/loading_message" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp"
                            android:text="@string/placeMainActivityTextView"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/cinemaMainActivityTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/loading_message" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>